--- a/css/sketch.css
+++ b/css/sketch.css
@@ -96,7 +96,7 @@ h2 {
     padding: 0;
     margin: 0;
     overflow-y: auto;
-    height: 60vh;    
+    height: 40vh;    
     padding-left: 16px;
     margin-left: 8px;
     padding-top: 16px;
@@ -113,6 +113,11 @@ h2 {
   padding: 4px;
   border-radius: 4px;
   font-size: 1rem;
+}
+
+.layer-item {
+    cursor: pointer;
+    user-select: none;
 }
 
 .layer-item:hover {
@@ -175,6 +180,11 @@ h2 {
     border: none;
     color: #f0f0f0;
     font-size: 1rem;
+}
+
+.layop {
+    cursor: pointer;
+    user-select: none;
 }
 
 .layop:hover {
@@ -240,9 +250,28 @@ h2 {
     border-left: 1px solid #696969;
 }
 
+.properties {
+    cursor: pointer;
+    user-select: none;
+}
+
 .colorPicker {
     width: 100%;
     height: 10vh;
+}
+
+.swatch:hover {
+    border: 1px solid #666;
+    box-sizing: border-box;
+}
+
+.swatch:active {
+    border: 1px solid #fff;
+    box-sizing: border-box;
+}
+.swatch.selected {
+    border: 1px solid #fff;
+    box-sizing: border-box;
 }
 
 .toolbar {
@@ -262,7 +291,26 @@ h2 {
     z-index: 1000;
 }
 
+.toolbar {
+    cursor: pointer;
+    user-select: none;
+}
 
+/* .select, .pencil, .brush, .eraser, .fill {
+    
+} */
+
+.select:hover, .pencil:hover, .brush:hover, .eraser:hover, .fill:hover {
+    background-color: #6a6a6a;
+}
+
+.toolbar-active {
+    border: 1px solid #6a6a6a ;
+    border-radius: 8px;
+    box-sizing: border-box;
+    padding-left: 8px;
+    padding-right: 8px;
+}
 
 
 
