--- a/css/sketch.css
+++ b/css/sketch.css
@@ -197,10 +197,18 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 70%;
     background-color: #1e1e1e;
-    position: relative;
+    position: relative;    
+    width: 70vw;
+    height: 100vh;
+}
+
+.canvas {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: transparent;
 }
 
 #gridCanvas, #mainCanvas, #overlayCanvas {
