--- a/css/sketch.css
+++ b/css/sketch.css
@@ -202,9 +202,18 @@ h2 {
     padding-bottom: 16px;
 }
 
+#styleOptions {
+    list-style: none;
+}
+
+#layoprangediv{
+    margin-left: 16px;
+    width: 100%;
+}
+
 #layopacityrange {
     margin-left: 16px;
-    width: 80%;
+    width: 70%;
     height: 16px;
 }
 
@@ -212,6 +221,36 @@ h2 {
     margin-left: 16px;
     height: 24px;
 }
+
+.savebtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 32px;
+    border-bottom: 1px solid #696969;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    cursor: pointer;
+    user-select: none;
+}
+
+#savePixels {
+    width: 96%;
+    height: 32px;
+    border: 1px solid #000000;
+    border-radius: 4px;
+}
+
+#savePixels:hover {
+    background-color: #000000;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    border-radius: 4px;   
+    transform: scale(0.95);
+    transition: scale 0.1s ease-in-out;   
+}
+
 
 .download {
     display: inline-flex;
